vlib/v/checker/tests/const_field_add_err.out
vlib/v/checker/tests/const_field_add_err.vv:6:2: error: cannot modify constant `a`
    4 | 
    5 | fn main() {
    6 |     a += 1
      |     ^
    7 | }
